--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     command: >
       sh -c "
       if [ \"$NODE_ENV\" = 'development' ]; then
-        npm install && npx prisma migrate deploy && npm run start:dev ;
+        npm install && npx prisma generate && npx prisma migrate deploy && npm run start:dev ;
       else
         npm run start;
       fi
